--- a/10_Days_of_Javascript/Day9_Binary_Calc/index.html
+++ b/10_Days_of_Javascript/Day9_Binary_Calc/index.html
@@ -4,22 +4,27 @@
 <head>
     <meta charset="utf-8">
     <title>Binary Calculator</title>
-    <link rel="stylesheet" href="css/binaryCalculator.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
     <script src="js/binaryCalculator.js" type="text/javascript"></script>
     <div>
-        <div id="res">
+        <div id="caalcBody">
+            <div id=res>
+
+            </div>
             <div id="btns">
                 <button id="btn0">0</button>
                 <button id="btn1">1</button>
-                <button id="btn1">C</button>
-                <button id="">=</button>
-
-                <button id="">=</button>
+                <button id="btnClr">C</button>
+                <button id="btnEql">=</button>
+                <br>
+                <button id="btnSum">+</button>
+                <button id="btnSub">-</button>
+                <button id="btnMul">*</button>
+                <button id="btnDiv">/</button>
             </div>
-
         </div>
     </div>
 </body>
